--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../images/sayagata-400px/sayagata-400px.png")
+    background-image: url("../images/sayagata-400px/sayagata-400px.png") 
 }
 
 header {
@@ -62,6 +62,7 @@ li a {
     width: 650px;
     margin-left: 100px;
     margin-right: 40px;
+    margin-bottom: 100px;
     padding-bottom: 20px;
     padding-right: 20px;
     padding-left: 20px;
@@ -134,15 +135,18 @@ li a {
 footer {
     background-color: #666666;
     color: #c7c7c7;
-    position: absolute;
+    position: fixed;
     text-align: center;
     line-height: 6;
     height: 70px;
-    bottom: -160px;
+    bottom: 0;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
     border-top: 8px solid #4aaaa5;
-    left: 0px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    z-index: 2;
 }
 
 /* Contact Form CSS Styling */
@@ -158,6 +162,7 @@ footer {
     width: 650px;
     margin-left: 100px;
     margin-right: 40px;
+    margin-bottom: 100px;
     padding-bottom: 20px;
     padding-right: 20px;
     padding-left: 20px;
@@ -198,6 +203,7 @@ input[type=submit]:hover {
     width: 650px;
     margin-left: 100px;
     margin-right: 40px;
+    margin-bottom: 100px;
     padding-bottom: 20px;
     padding-right: 20px;
     padding-left: 20px;
@@ -210,6 +216,8 @@ input[type=submit]:hover {
     height: 200px;
     width: 300px;
     margin: 10px;
+    position: relative;
+    overflow: auto;
 }
 
 .scratch {
@@ -217,11 +225,9 @@ input[type=submit]:hover {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    overflow: hidden;
-    position: relative;
 }
 
-#scratchbanner {
+.scratchbanner {
     background-color: #4aaaa5;
     text-align: center;
     color: #ffffff;
@@ -231,6 +237,7 @@ input[type=submit]:hover {
     padding: 5px;
     position: absolute;
     left: 138px;
+    z-index: 1;
 }
 
 .chicken {
@@ -240,11 +247,9 @@ input[type=submit]:hover {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    overflow: hidden;
-    position: relative;
 }
 
-#chickenbanner {
+.chickenbanner {
     background-color: #4aaaa5;
     text-align: center;
     color: #ffffff;
@@ -254,6 +259,7 @@ input[type=submit]:hover {
     margin: 0;
     padding: 5px;
     position: absolute;
+    z-index: 1;
 }
 
 .comingsoon {
@@ -263,11 +269,9 @@ input[type=submit]:hover {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    overflow: hidden;
-    position: relative;
 }
 
-#comingsoonbanner {
+.comingsoonbanner {
     background-color: #4aaaa5;
     text-align: center;
     color: #ffffff;
@@ -277,6 +281,7 @@ input[type=submit]:hover {
     margin: 0;
     padding: 5px;
     position: absolute;
+    z-index: 1;
 }
 
 .comingsoon2 {
@@ -286,11 +291,9 @@ input[type=submit]:hover {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    overflow: hidden;
-    position: relative;
 }
 
-#comingsoonbanner2 {
+.comingsoonbanner2 {
     background-color: #4aaaa5;
     text-align: center;
     color: #ffffff;
@@ -300,6 +303,7 @@ input[type=submit]:hover {
     margin: 0;
     padding: 5px;
     position: absolute;
+    z-index: 1;
 }
 
 .comingsoon3 {
@@ -309,11 +313,9 @@ input[type=submit]:hover {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    overflow: hidden;
-    position: relative;
 }
 
-#comingsoonbanner3 {
+.comingsoonbanner3 {
     background-color: #4aaaa5;
     text-align: center;
     color: #ffffff;
@@ -323,87 +325,248 @@ input[type=submit]:hover {
     margin: 0;
     padding: 5px;
     position: absolute;
+    z-index: 1;
 }
 
-#portfoliofooter {
-    background-color: #666666;
-    color: #c7c7c7;
-    position: absolute;
-    text-align: center;
-    line-height: 6;
-    height: 70px;
-    bottom: -295px;
-    width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-    border-top: 8px solid #4aaaa5;
-    left: 0px;
-}
-
-@media screen and (max-width: 980) {
+@media screen and (max-width: 980px) {
     .navbar {
-        max-width: 425px;
-        margin-left: 15px;
+        max-width: 980px;
     }
     .aboutme {
-        width: 50px;
-        margin-left: 15px;
+        width: 420px;
+        margin-left: 50px;
     }
 
     .connect {
-        position: relative;
-        top: 10px;
+        left: 560px;
+        width: 215px;
     }
 
-    footer {
-        height: 0px;
+    .portfolio {
+        width: 420px;
+        margin-left: 50px;
+        text-align: center;
+    }
+    .comingsoonbanner {
+        top: 1095px;
+    }
+
+    .chickenbanner {
+        left: 138px;
+        top: 638px;
+    }
+
+    .contactform {
+        width: 420px;
+        margin-left: 50px;
+    }
+
+    .comingsoonbanner2 {
+        left: 138px;
+        top: 1325px;
     }
 }
 
-@media screen and (max-width: 768) {
-    body {
-        background-color: black;
-    }
-
+@media screen and (max-width: 768px) {
     .navbar {
-        max-width: 625px;
-        margin-left: 15px;
+        max-width: 768px;
     }
     .aboutme {
-        width: 50px;
-        margin-left: 15px;
+        width: 600px;
+        margin-left: 50px;
+        margin-bottom: 50px;
     }
 
     .connect {
-        position: relative;
-        top: 10px;
+        width: 580px;
+        position: absolute;
+        left: 13px;
+        top: 720px;
+        margin-bottom: 120px;
+        text-align: left;
     }
 
-    footer {
-        height: 0px;
+    .portfolio {
+        margin-left: 50px;
+        width: 600px;
+    }
+    
+    .portfolioimages {
+        height: 150px;
+        width: 250px;
+        margin: 10px;
+        position: relative;
+        overflow: auto;
+    }
+    
+    .comingsoon3 {
+        left: -136px;
+    }
+
+    .banner {
+        width: 240px;
+        height: 30px;
+        font-size: 20px;
+        line-height: 1.5;
+        z-index: 1;
+    }
+
+    .scratchbanner {
+        left: 116px;
+        top: 373px;
+    }
+
+    .chickenbanner {
+        left: 390px;
+        top: 373px;
+    }
+
+    .comingsoonbanner {
+        left: 116px;
+        top: 552px;
+    }
+
+    .comingsoonbanner2 {
+        left: 390px;
+        top: 552px;
+    }
+
+    .comingsoonbanner3 {
+        left: 116px;
+        top: 731px;
+    }
+
+    .conportfolio {
+        width: 580px;
+        position: absolute;
+        left: 13px;
+        top: 870px;
+        margin-bottom: 120px;
+    }
+
+    .contactform {
+        width: 600px;
+        margin-left: 50px;
+        margin-bottom: 100px;
+    }
+
+    .contact {
+        width: 580px;
+        position: absolute;
+        left: 13px;
+        top: 790px;
+        margin-bottom: 120px;
     }
 }
 
-@media screen and (max-width: 640) {
-    background-color: blue;
+@media screen and (max-width: 640px) {
 
-    header {
+    #nameheader {
         position: static;
+        width: 100%;
+        text-align: center;
     }
-        .navbar {
-            max-width: 425px;
-            margin-left: 15px;
-        }
-        .aboutme {
-            width: 50px;
-            margin-left: 15px;
-        }
     
-        .connect {
-            position: relative;
-            top: 10px;
-        }
+    li a {
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+
+    .navlinks {
+        top: 100px;
+        position: absolute;
+        left: 0px;
+        width: 690px;
+        text-align: center;
+        background-color: #ffffff;
+        margin-bottom: 20px;
+        z-index: 1;
+    }
+
+    ul {
+        left: -10px;
+        float: left;
+    }
+
+    .aboutme {
+        width: 600px;
+        margin-left: 15px;
+        top: 200px;
+        position: absolute;
+    }
     
-        footer {
-            height: 0px;
-        }
+    .connect {
+        position: absolute;
+        top: 790px;
+        left: -20px;
+    }
+
+    .portfolio {
+        top: 200px;
+        position: absolute;
+        width: 600px;
+        margin-left: 15px;
+    }
+
+    .portfolioimages {
+        height: 400px;
+        width: 500px;
+        margin: 10px;
+        position: relative;
+        overflow: auto;
+        margin-top: 20px;
+    }
+
+    .banner {
+        width: 489px;
+        height: 40px;
+        font-size: 20px;
+        line-height: 1.5;
+        z-index: 1;
+        left: 71px;
+    }
+
+    .scratchbanner {
+        top: 460px;
+    }
+
+    .chickenbanner {
+        top: 900px;
+    }
+
+    .comingsoonbanner {
+        top: 1340px;
+    }
+
+    .comingsoonbanner2 {
+        top: 1780px;
+    }
+
+    .comingsoonbanner3 {
+        top: 2220px;
+    }
+
+    .comingsoon3 {
+        left: 0px;
+    }
+
+    .conportfolio {
+        top: 2600px;
+    }
+
+    .contactform {
+        width: 550px;
+        margin-left: 15px;
+        position: absolute;
+        top: 200px;
+        margin-right: 0;
+    }
+
+    .contact {
+        width: 530px;
+        left: -22px;
+        top: 870px;
+        margin-right: 0;
+    }
+
 }
